# doubles-with-pytest

./: .gitignore  .travis.yml  README.md  pyproject.toml
sample_app/: app.py
test/: conftest.py  doubles.py  fake_boto.py  test_upload.py
